feat: add GA4 tracking for pageviews and lead events

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,6 @@ LEAD_TO_EMAIL=contato@easyai.com.br
 
 # E-mail remetente (opcional, por padrão usa SMTP_USER)
 LEAD_FROM_EMAIL=contato@easyai.com.br
+
+# Google Analytics 4 (opcional)
+NEXT_PUBLIC_GA_MEASUREMENT_ID=G-XXXXXXXXXX
